[tool.poetry]
name = "terminal-snake"
version = "0.1.0"
description = ""
authors = ["Julian Leucker <leuckerj@gmail.com>"]
packages = [
    { include = "*.py" },
]
readme = "README.md"
repository = "https://github.com/ZugBahnHof/terminal-snake"
keywords = ["game", "commandline", "terminal", "utf-8", "emoji"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
